# raytracing-denoising

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
assets/models/: license.txt  scene.gltf  sphere.mtl
assets/models/peach_castle/: scene.gltf
raytracing-denoising/raytracing-denoising/: main.cpp
src/: Application.cpp  Application.hpp  Character.cpp  Character.hpp  RandomScene.cpp  RandomScene.hpp  RaytracingHandler - Copy.hpp  RaytracingHandler.cpp  RaytracingHandler.hpp  ShaderModule.cpp  ShaderModule.hpp  TextureModule.cpp  TextureModule.hpp  Utils.cpp  Utils.hpp  gltfLoader.cpp  gltfLoader.hpp  main.cpp  vkValidation.hpp
src/shaders/: CMakeLists.txt  basicTriangle.frag  basicTriangle.vert  closehit.rchit  miss.rmiss  raygen.rgen
